--- a/index.html
+++ b/index.html
@@ -28,45 +28,47 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a id="welcome-to-the-ntu-open-source-societys-github-page" class="anchor" href="#welcome-to-the-ntu-open-source-societys-github-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to the NTU Open Source Society's Github page.</h3>
+<a id="welcome-to-the-ntu-open-source-societys-github-page" class="anchor" href="#welcome-to-the-ntu-open-source-societys-github-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to the Open Source Society's Github page.</h3>
 
 <p><em>The Open Source Society is Nanyang Technological University's Resident Hacker Club</em></p>
 
-<p>We are the guys behind the popular <a href="http://www.ntuoss.com/tgifhacks/">TGIFHacks</a>. This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p>We are the guys behind the popular <a href="http://www.ntuoss.com/tgifhacks/">TGIFHacks</a>. Follow us on the web on the following channels:
+  <li>Facebook: <a href="https://www.facebook.com/ntuoss">ntuoss</a></li>
+  <li>Twitter: <a href="https://twitter.com/ntuoss">@ntuoss</a></li>
+  <li>Github: <a href="https://github.com/ntuoss">ntuoss</a></li>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Who are we:</h3>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<p>We are a student community at the Nanyang Technological University helping to promote the value and importance of Open Source in NTU. We attract students of common technical interests to foster <strong style = "color:#800000;">a community of engineers, hackers and builders</strong> to explore their interests in technology and share their knowledge and expertise with others.</p>
 
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+<p>Through our weekly meetings, called <strong><a href="http://www.ntuoss.com/tgifhacks/" >TGIFHacks</a></strong>, we help students learn practical coding skills, find partners to work with on interesting projects and also help promote the value and importance of contributing to open source development.</p>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p style = "color:#800000;">We are NTU's resident hackers and we like to build things. That's why you should hack with us!</p>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>What we do:</h3>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>
+  We attract some of the smartest students in NTU and we hope to learn, work or just hangout with people smarter than us. 
+  <li><a href="http://www.ntuoss.com/tgifhacks/">TGIFHacks: </a>Every Friday from 6pm @ <a href="http://maps.ntu.edu.sg/m?q=Tutorial%20Room%20+%2037&fs=s">TR+36 (NS2-05-30)</a>*. Accompanied usually by free food<.</li>
+  <li><a href="http://oss.sce.ntu.edu.sg/">Ubuntu mirror </a></li>
+  <li><a href="http://torproject.ntuoss.com/">The Tor Project </a></li>  
+</p>
+
+<small>*Sometimes we relocate to larger venues. You should check the list <a href="https://www.facebook.com/ntuoss/events">here</a> for the exact venue for the latest event.</small>
+
+<h3>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact</h3>
+
+<p>Get in touch with us at <a href="mailto:hackers@ntuoss.com">hackers@ntuoss.com</a> and we’ll get back to you as soon as the code finishes compiling...</p>
       </section>
     </div>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a>... obviously!</p>
       </footer>
     </div>
 
