--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
 
 <p>
   We attract some of the smartest students in NTU and we hope to learn, work or just hangout with people smarter than us. 
-  <li><a href="http://www.ntuoss.com/tgifhacks/">TGIFHacks: </a>Every Friday from 6pm @ <a href="http://maps.ntu.edu.sg/m?q=Tutorial%20Room%20+%2037&fs=s">TR+36 (NS2-05-30)</a>*. Accompanied usually by free food<.</li>
+  <li><a href="http://www.ntuoss.com/tgifhacks/">TGIFHacks: </a>Every Friday from 6pm @ <a href="http://maps.ntu.edu.sg/m?q=Tutorial%20Room%20+%2037">TR+36 (NS2-05-30)</a>*. Accompanied usually by free food.</li>
   <li><a href="http://oss.sce.ntu.edu.sg/">Ubuntu mirror </a></li>
   <li><a href="http://torproject.ntuoss.com/">The Tor Project </a></li>  
+  <li>We're working on some more... If you have any suggestions, we'd love to hear them.</li>
 </p>
 
 <small>*Sometimes we relocate to larger venues. You should check the list <a href="https://www.facebook.com/ntuoss/events">here</a> for the exact venue for the latest event.</small>
