--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
 
 <p><em>The Open Source Society is Nanyang Technological University's Resident Hacker Club</em></p>
 
-<p>We are the guys behind the popular <a href="http://www.ntuoss.com/tgifhacks/">TGIFHacks</a>. Follow us on the web on the following channels:
-  <li>Facebook: <a href="https://www.facebook.com/ntuoss">ntuoss</a></li>
+<p>We are the guys behind the popular <a href="http://www.ntuoss.com/tgifhacks/">TGIFHacks</a>. Follow us on the web on the following channels for regular updates:
+  <li>Official Club website: <a href="http://www.ntuoss.com/">www.ntuoss.com</a></li>
+  <li>Facebook: <a href="https://www.facebook.com/ntuoss">facebook.com/ntuoss</a></li>
   <li>Twitter: <a href="https://twitter.com/ntuoss">@ntuoss</a></li>
-  <li>Github: <a href="https://github.com/ntuoss">ntuoss</a></li>
+  <li>Github: <a href="https://github.com/ntuoss">github.com/ntuoss</a></li>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Who are we:</h3>
@@ -62,7 +63,7 @@
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact</h3>
 
-<p>Get in touch with us at <a href="mailto:hackers@ntuoss.com">hackers@ntuoss.com</a> and we’ll get back to you as soon as the code finishes compiling...</p>
+<p>Get in touch with us at <a href="mailto:hackers@ntuoss.com">hackers@ntuoss.com</a> and we’ll get back to you as soon as the coffee finishes brewing and the code finishes compiling...</p>
       </section>
     </div>
 
